a few typos in the internal technote I found while writing the publication draft

--- a/Tex/introduction.tex
+++ b/Tex/introduction.tex
@@ -8,7 +8,7 @@ MicroBooNE (Micro Booster Neutrino Experiment) is an experiment based at the Fer
 \caption{\textit{A diagram of the time projection chamber of the MicroBooNE detector \cite{lartpc}.}}\label{detector_fig}
 \end{figure}
 
-The MicroBooNE detector is currently the largest LArTPC in the United States. It consists of a rectangular time projection chamber (TPC) with dimensions 2.6 m width $\times$ 2.3 m height $\times$ 10.4 m length located 470 m away from the Booster Neutrino Beam (BNB) target. Time projection chambers, filled with a gas or liquid volume, are used to analyze particle interactions in three dimensions. The x-direction of the TPC corresponds to the drift coordinate, the y-direction is the vertical direction, and the z-direction is the direction along the beam. The amount of active liquid argon in the TPC is 89 tons, with the total cryostat containing 170 tons of liquid argon. Liquid argon is chosen to fill the volume for a variety of reasons: argon contains a high density of nucleons, which allows for a greater rate of interactions with particles within the medium; argon ionizes easily; it is transparent to itw own scintillation light; it has a high electron lifetime; and it is inexpensive.\\
+The MicroBooNE detector is currently the largest LArTPC in the United States. It consists of a rectangular time projection chamber (TPC) with dimensions 2.6 m width $\times$ 2.3 m height $\times$ 10.4 m length located 470 m away from the Booster Neutrino Beam (BNB) target. Time projection chambers, filled with a gas or liquid volume, are used to analyze particle interactions in three dimensions. The x-direction of the TPC corresponds to the drift coordinate, the y-direction is the vertical direction, and the z-direction is the direction along the beam. The amount of active liquid argon in the TPC is 89 tons, with the total cryostat containing 170 tons of liquid argon. Liquid argon is chosen to fill the volume for a variety of reasons: argon contains a high density of nucleons, which allows for a greater rate of interactions with particles within the medium; argon ionizes easily; it is transparent to its own scintillation light; it has a high electron lifetime; and it is inexpensive.\\
 
 Photomultiplier tubes (PMTs) and three wire planes with 3mm spacing at angles of 0, and $\pm$ 60 degrees with respect to the vertical are located in the TPC to aid with event reconstruction (Figure \ref{detector_fig}). In a neutrino interaction, a neutrino from the beam interacts with the argon and the charged outgoing child particles traverse the medium, losing energy and leaving an ionization trail. The resulting electrons drift to the anode side of the TPC, containing the wire planes, away from the negatively charged cathode plate on the opposite side. The movement of electrons induces a current in the wires, which is used to create three distinct two-dimensional views of the event. Combining these wire signals with timing information from the PMTs allows for full three-dimensional reconstruction of the event.\\
 
@@ -21,7 +21,7 @@ Photomultiplier tubes (PMTs) and three wire planes with 3mm spacing at angles of
 
 % \noindent where $\theta$ is the mixing angle, $L$ is the distance from the neutrino source to the detector, $E$ is the energy of the neutrino, and $\Delta m^2$ is the neutrino squared mass difference. $\theta$ and $\Delta m^2$ are the two free parameters of interest in the above equation. The probability $P$ can be determined through a measurement of observed neutrino events compared to expected events, the distance $L$ is readily determined and constant, and $E$ can be computed from the energies of the neutrino's interaction products. 
 
-The BNB is predominantly composed of muon neutrinos, which can undergo charge-current interactions in the TPC and produce muons. For muon tracks that are completely contained in the TPC, it is straightforward to calculate the momentum with a measurement of the length of the particle's track. Around half of muons from BNB neutrino events in {\ub} are not fully contained in the TPC, and therefore using length-based calculations for these uncontained tracks is not a possibility. The only way to compute the energy of an outgoing three-dimensional track is by means of multiple coulomb sccattering (MCS). \\
+The BNB is predominantly composed of muon neutrinos, which can undergo charge-current interactions in the TPC and produce muons. For muon tracks that are completely contained in the TPC, it is straightforward to calculate the momentum with a measurement of the length of the particle's track. Around half of muons from BNB neutrino events in {\ub} are not fully contained in the TPC, and therefore using length-based calculations for these uncontained tracks is not a possibility. The only way to compute the energy of an outgoing three-dimensional track is by means of multiple coulomb scattering (MCS). \\
 
 The phenomenon of multiple coulomb scattering (MCS) occurs when a charged particle enters a medium and undergoes electromagnetic scattering with the atomic nuclei. This scattering deviates the original trajectory of the particle within the material (Figure \ref{mcs_nocap_fig}). For a given energy, the scatters of a track-like particle (in terms of angular deflection relative to the track direction) form a gaussian distribution centered at zero with a standard deviation given by the Highland formula \cite{highland}: 
 
