small typo found in the internal note technique section

--- a/Tex/technique.tex
+++ b/Tex/technique.tex
@@ -73,6 +73,6 @@ E_t^2 = p_t^2 + m_\mu^2
 \begin{equation}\label{segment_E_equation}
 E_{j} = E_t - k_{cal}*N_{upstream}*l_{seg}
 \end{equation}
-where $k_{cal}$ is the minimally ionizing energy constant given to be $2.105 \frac{MeV}{cm}$ in liquid argon\cite{MIPenergysource}, $N_{upstream}$ is the number of segments upstream of this particular segment, and $l_{seg}$ is the segmentation length\footnote{Note that measuring the energy loss directly via calorimetric methods is likely a more appropriate way to compute $E_j$ but incorporating calorimetry is outside the scope of this analysis}. This definition of $E_j$ therefore takes into account energy loss along the track, and can never be negative given the range of possible $E_t$ values described previously (the aforementioned raster scan begins at the track's range-based momentum). This value of segment energy is used to predict the RMS angular scatter for that segment ($\sigma_o^{RMS}$) by way of a modified version of the modified Highland formula, Equation \ref{modified_highland_eqtn}. Still assuming the mean angular scatter, $\mu_o$, is zero, Equation \ref{negative_llh_eqtn} is evaluated for each segment and all evaluations are summed to compute a total summed negative log likelihood for that postulated track energy, $E_t$.\\
+where $k_{cal}$ is the minimally ionizing energy constant given to be $2.105 \frac{MeV}{cm}$ in liquid argon\cite{MIPenergysource}, $N_{upstream}$ is the number of segments upstream of this particular segment, and $l_{seg}$ is the segmentation length\footnote{Note that measuring the energy loss directly via calorimetric methods is likely a more appropriate way to compute $E_j$ but incorporating calorimetry is outside the scope of this analysis}. This definition of $E_j$ therefore takes into account energy loss along the track, and can never be negative given the range of possible $E_t$ values described previously (the aforementioned raster scan begins at the track's range-based momentum). This value of segment energy is used to predict the RMS angular scatter for that segment ($\sigma_o^{RMS}$) by way of a modified version of Highland formula, Equation \ref{modified_highland_eqtn}. Still assuming the mean angular scatter, $\mu_o$, is zero, Equation \ref{negative_llh_eqtn} is evaluated for each segment and all evaluations are summed to compute a total summed negative log likelihood for that postulated track energy, $E_t$.\\
 
 After the raster scan over postulated track momenta is complete, the one with the smallest summed negative log likelihood is chosen to be the final MCS computed momentum for the track.
